--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My first game</title>
   </head>
   <body>
-    <script src="./js/main.js"></script>
+    <div id="board"></div>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
