--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="board"></div>
+    <button id="pause">STOP</button>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
